fixed misaligned content section

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
     padding-right:5px;
     box-sizing: border-box;
 
-    border-bottom: 85px solid #3E3579;
+    border-bottom: 90px solid #3E3579;
 }
 
 #page_header_bg{
